# CoD4-Mod-Optimizer

./: .gitignore  CoD4 Mod Optimizer.pyproj  IWD Optimizer.pyproj  README.md  appveyor.yml  iconvertableasset.py  image_asset.py  main.py  material_asset.py  optimizer.py  pyproject.toml  xmodel_asset.py
.github/workflows/: application.yml  build.yml
assets/: iconvertableasset.py  image_asset.py  xmodel_asset.py
optimizer/: __init__.py  __main__.py  container.py  main.py
optimizer/assets/: __init__.py  asset.py  csv.py  csv_file.py  i_optimizable_container.py  image_asset.py  image_container.py  material_asset.py  material_container.py  raw.py  xmodel_asset.py  xmodel_container.py
optimizer/assets/containers/: __init__.py  i_optimizable_container.py  image_container.py  material_container.py  xmodel_container.py
src/: __main__.py
src/containers/: __init__.py  container.py  image.py  material.py  xmodel.py
src/mod/: __init__.py  csv.py  raw.py
src/optimizer/: main.py
src/optimizer/containers/: __init__.py  container.py  image.py  material.py  xmodel.py
src/optimizer/mod/: __init__.py  csv.py  raw.py
