[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod4modoptimizer"
version = "1.2"
requires-python = ">=3.8"

[project.scripts]
optimizer = "optimizer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
